--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@
   width: 100%;
   text-align: center;
   margin-top: 20px;
+  display: none;
 }
 .temperature_box {
   font-size: 4rem;
@@ -80,6 +81,7 @@
   height: 85px;
   background: #5c5e68;
   transform-origin: bottom;
+  transform: rotate(-130deg);
   clip-path: polygon(50% 0%, 30% 100%, 70% 100%);
   border-radius: 5px;
   transition: transform 0.8s ease-in-out;
@@ -92,4 +94,54 @@
   height: 60px;
   border-radius: 50%;
   background: #5c5e68;
+}
+
+/* Loader */
+.loader {
+  width: 120px;
+  height: 100px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.loader span {
+  display: block;
+  width: 20px;
+  height: 20px;
+  background: #000;
+  border-radius: 50%;
+  animation: loader 1s ease-in-out infinite;
+}
+
+.loader span:nth-child(1) {
+  animation-delay: 0s;
+  background: #42a4ee;
+}
+.loader span:nth-child(2) {
+  animation-delay: 0.5s;
+  background: #5aac51;
+}
+.loader span:nth-child(3) {
+  animation-delay: 1s;
+  background: #ed8801;
+}
+.loader span:nth-child(4) {
+  animation-delay: 1.5s;
+  background: #ec3845;
+}
+
+@keyframes loader {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
